--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 		<title>Marble Blast Powered Up Web</title>
 		<meta name="description" content="A web port of Marble Blast Powered Up: In this 3D platformer classic, race your marble to the finish as fast as possible while escaping from dangerous hazards and grabbing new collectibles.. Marble Blast powered Up is a mod of Marble blast Gold , focused on introducing new power-ups and features to remix existing levels and create new ones. Play Marble Blast Powered Up online right in your browser or on your mobile device.">
 		<meta name="keywords" content="marble, blast, gold, platinum, MBPU, poweredup, marbleblast, marbleblastgold, marbleblastplatinum, marbleblastpoweredup, mbg, mbp, mbpu, garagegames, torque, web, mbpuwebport, puwebport, webport, port, online, mbpuonline">
-		<meta name="author" content="Abhishek">
+		<meta name="author" content="Abhi">
 		<meta property="og:title" content="Marble Blast Powered Up Web">
 		<meta property="og:type" content="website">
 		<meta property="og:description" content="A web port of Marble Blast Powered Up: In this 3D platformer classic, race your marble to the finish as fast as possible while escaping from dangerous hazards and grabbing new collectibles.. Marble Blast powered Up is a mod of Marble blast Gold , focused on introducing new power-ups and features to remix existing levels and create new ones. Play Marble Blast Powered Up online right in your browser or on your mobile device.">
